<resources>
    <string name="app_name">GithubChallenge</string>
    <string name="star_count">Stars</string>
    <string name="fork_count">Forks</string>
    <string name="watchers_count">Watchers</string>
    <string name="owner_image">Owner avatar</string>
    <string name="owner_name_with_param">Owner: %s</string>
    <string name="owner_name">Owner</string>
    <string name="empty_string"> </string>
    <string name="no_internet_error">Check your internet connection</string>
    <string name="generic_error">Sorry, something went wrong</string>
</resources>
